# hd_fpv_osd_font_tool

./: .gitignore  Cargo.toml  Justfile  README.md  TODO
git/hooks/: pre-commit
man_pages/: hd_fpv_osd_font_tool-convert-set.1  hd_fpv_osd_font_tool-convert.1  hd_fpv_osd_font_tool.1
src/: TODO  create_path.rs  dimensions.rs  file.rs  image.rs  lib.rs  main.rs  osd.rs  prelude.rs
src/osd/: avatar_file.rs  bin_file.rs  standard_size_tile_container.rs  symbol.rs  tile.rs
src/osd/symbol/: spec.rs
src/osd/tile/: container.rs  containers.rs  grid.rs
src/osd/tile/container/: into_tile_grid.rs  load_symbols_from_dir.rs  load_tiles_from_dir.rs  save_symbols_to_dir.rs  save_tiles_to_dir.rs  save_to_avatar_file.rs  save_to_bin_file.rs  save_to_grid.rs  symbol.rs  symbol_tiles_iter.rs  tile_set.rs  uniq_tile_kind.rs
src/osd/tile/container/symbol/: set.rs  spec.rs
symbol_specs/: ardu.yaml  inav.yaml
