[package]
name = "hd_fpv_osd_font_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
array-macro = "2.1.5"
clap = { version = "4.0.18", features = ["derive"] }
clap_mangen = "0.2.5"
close-err = "1.0.1"
derive_more = "0.99.17"
env_logger = "0.10.0"
getset = "0.1.2"
image = { version = "0.24.4", features = ["rgb"] }
lazy_static = "1.4.0"
log = "0.4.17"
parse_int = "0.6.0"
paste = "1.0.9"
regex = "1.7.0"
serde = "1.0.147"
serde_yaml = "0.9.14"
strum = { version = "0.24.1", features = ["derive"] }
tap = "1.0.1"
thiserror = "1.0.37"

[dev-dependencies]
itertools = "0.10.5"
sha2 = "0.10.6"
temp-dir = "0.1.11"
