[package]
name = "hd_fpv_osd_font_tool"
description = "A software tool to manipulate video files and OSD files recoded with the DJI FPV system"
version = "1.1.0"
edition = "2021"
license = "GPL-2.0-only"
authors = ["Michel Pastor <shellixyz@gmail.com>"]
rust-version = "1.61"
repository = "https://github.com/shellixyz/hd_fpv_osd_font_tool"
homepage = "https://github.com/shellixyz/hd_fpv_osd_font_tool"
keywords = ["dji", "fpv", "font", "osd"]
categories = ["command-line-utilities"]
readme = "README.md"
exclude = ["*.webm", "*.osd", "*.mp4", "*.bin"]
publish = false

[dependencies]
anyhow = "1.0.95"
array-macro = "2.1.8"
clap = { version = "4.5.27", features = ["derive"] }
clap_mangen = "0.2.26"
close-err = "1.0.2"
derive_more = { version = "1.0.0", features = ["from", "add", "mul", "display", "deref", "deref_mut", "error", "into_iterator", "index"] }
env_logger = "0.10.2"
fs-err = { git = "ssh://git@github.com/shellixyz/fs-err", branch = "custom", version = "3.0.0", features = ["close"] }
getset = "0.1.4"
image = { version = "0.24.9", features = ["rgb"] }
lazy_static = "1.5.0"
log = "0.4.17"
parse_int = "0.6.0"
paste = "1.0.15"
regex = "1.11.1"
serde = "1.0.217"
serde_yaml = "0.9.33"
strum = { version = "0.26.3", features = ["derive"] }
tap = "1.0.1"
thiserror = "2.0.11"

[dev-dependencies]
itertools = "0.10.5"
sha2 = "0.10.6"
temp-dir = "0.1.11"
